Import-kernel-patches-for-porter-ext01-board.patch

--- a/meta-rcar-gen2/recipes-kernel/linux/linux-renesas/porter.cfg
+++ b/meta-rcar-gen2/recipes-kernel/linux/linux-renesas/porter.cfg
@@ -2,3 +2,20 @@ CONFIG_CAN=y
 CONFIG_CAN_RCAR=y
 CONFIG_VIDEO_RENESAS_JPU=y
 CONFIG_RAVB=y
+CONFIG_CGROUPS=y
+CONFIG_RELAY=y
+CONFIG_PADATA=y
+CONFIG_INPUT_FF_MEMLESS=y
+CONFIG_INPUT_JOYDEV=y
+CONFIG_INPUT_MISC=y
+CONFIG_SPI_GPIO=y
+CONFIG_HID_LOGITECH=y
+CONFIG_LOGIWHEELS_FF=y
+CONFIG_HID_MULTITOUCH=y
+CONFIG_USB_SERIAL=y
+CONFIG_USB_SERIAL_CONSOLE=y
+CONFIG_USB_SERIAL_GENERIC=y
+CONFIG_USB_SERIAL_PL2303=y
+CONFIG_EXT4_FS=y
+CONFIG_JBD2=y
+CONFIG_DEBUG_FS=y
